[package]
name = "header_completer"
version = "0.3.2"
edition = "2021"

[dependencies]
clang = { version = "2.0.0", features = ["clang_3_8", "clang_3_9", "clang_9_0"] }
clap = { version = "4.0.32", features = ["derive"] }
glob = { version = "0.3.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }